--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-KERNEL_SOURCE=https://github.com/maju-blogs/kernel_xiaomi_sm8250
-KERNEL_SOURCE_BRANCH=android12-stable
-KERNEL_CONFIG=umi_defconfig
+KERNEL_SOURCE=github.com/J-T-T-T-T/android_kernel_xiaomi_msm8937
+KERNEL_SOURCE_BRANCH=android8.0-stable
+KERNEL_CONFIG=tbx605m_msm8937_defconfig
 KERNEL_IMAGE_NAME=Image
 ARCH=arm64
 EXTRA_CMDS:LD=ld.lld
