--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-KERNEL_SOURCE=github.com/J-T-T-T-T/android_kernel_xiaomi_msm8937
+KERNEL_SOURCE=https://github.com/J-T-T-T-T/android_kernel_xiaomi_msm8937
 KERNEL_SOURCE_BRANCH=android8.0-stable
 KERNEL_CONFIG=tbx605m_msm8937_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
